# simdrone_gazebo

./: 1Notes  CMakeLists.txt  README.md  droneAR.run  droneBOP.run  mke  world.sdf
images/: screen2  screen3
model/parrot_ar/: parrot_ar.world
model/parrot_bebop_2/: parrot_bebop.world
src/: DialogKeyboard.cpp  DialogKeyboard.h  drone_keyboard.cpp  drone_object_ros.cpp  drone_object_ros.h  plugin_drone.cpp  plugin_drone.h  plugin_imu_native.cpp  plugin_imu_native.h
